# OpenCV_ML

./: README.md
CV_contour_detection/: CMakeLists.txt  main.cpp  readme.md
Canny_edge_detection/: CMakeLists.txt  main.cpp  readme.md
ConsoleImageEditor/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  readme.md
FaceDecectionHaar/: CMakeLists.txt  main.cpp
FaceDetectionHaar/: CMakeLists.txt
